User e Organization Controller, service e endpoints