@@ -1,6 +1,7 @@
 package com.qasystem.backend.controllers;
 
 import com.qasystem.backend.dtos.CreateUserDTO;
+import com.qasystem.backend.dtos.UpdateUserDTO;
 import com.qasystem.backend.dtos.UserDTO;
 import com.qasystem.backend.entities.User;
 import com.qasystem.backend.services.UserService;
@@ -12,6 +13,8 @@ import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/users")
@@ -19,6 +22,36 @@ public class UserController {
 
     @Autowired
     private UserService userService;
+
+    @GetMapping("/{id}")
+    public ResponseEntity<UserDTO> findById(
+            @AuthenticationPrincipal User requester,
+            @PathVariable UUID id
+    ) {
+        User user = userService.findByIdForOrg(id, requester.getOrganization().getId());
+        return ResponseEntity.ok(new UserDTO(user));
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<UserDTO> update(
+            @AuthenticationPrincipal User requester,
+            @PathVariable UUID id,
+            @Valid @RequestBody UpdateUserDTO dto
+    ) {
+        User user = userService.update(id, dto, requester);
+        return ResponseEntity.ok(new UserDTO(user));
+    }
+
+
+    // Atualiza apenas o status (ativo ou inativo)
+    @PatchMapping("/{id}/status")
+    public ResponseEntity<UserDTO> toggleStatus(
+            @AuthenticationPrincipal User requester,
+            @PathVariable UUID id
+    ) {
+        User user = userService.toggleActive(id, requester);
+        return ResponseEntity.ok(new UserDTO(user));
+    }
 
     @PostMapping
     public ResponseEntity<UserDTO> create(
@@ -39,6 +72,17 @@ public class UserController {
     @GetMapping
     public ResponseEntity<List<UserDTO>> list(@AuthenticationPrincipal User requester) {
         List<User> users = userService.findAllByOrganization(requester.getOrganization().getId());
-        return ResponseEntity.ok(users.stream().map(UserDTO::new).toList());
+        return ResponseEntity.ok(
+                users.stream().map(UserDTO::new).collect(Collectors.toList())
+        );
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> delete(
+            @AuthenticationPrincipal User requester,
+            @PathVariable UUID id
+    ) {
+        userService.softDelete(id, requester);
+        return ResponseEntity.noContent().build();
     }
 }
